equalized odds done, still need to vizualise

--- a/baseline_evaluations.ipynb
+++ b/baseline_evaluations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +51,163 @@
       "    accuracy                           0.56     22407\n",
       "   macro avg       0.51      0.52      0.41     22407\n",
       "weighted avg       0.91      0.56      0.68     22407\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Overall Model Accuracy: 0.774445485785692\n",
+      "Overall True Positive Rate (Sensitivity): 0.7721066013748941\n",
+      "Overall True Negative Rate (Specificity): 0.8169375534644996\n",
+      "Classification Report for overall model:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.16      0.82      0.27      1169\n",
+      "           1       0.99      0.77      0.87     21238\n",
+      "\n",
+      "    accuracy                           0.77     22407\n",
+      "   macro avg       0.58      0.79      0.57     22407\n",
+      "weighted avg       0.94      0.77      0.84     22407\n",
       "\n",
       "Results for each attribute:\n",
       "  Attribute  Accuracy  Sensitivity  Specificity\n",
       "0     race1  0.831838     0.852293     0.460222\n",
       "1    gender  0.560004     0.564083     0.485885\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
@@ -67,14 +219,10 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv('processed_data.csv')\n",
+    "df = pd.read_csv('data/processed_data.csv')\n",
     "\n",
-    "# Define the sensitive attributes\n",
+    "# Define sensitive attributes\n",
     "sensitive_attributes = ['race1', 'gender']\n",
-    "\n",
-    "# Assuming 'bar' is the target column\n",
-    "X = df.drop(columns=['target'])  # Features\n",
-    "y = df['target']  # Target\n",
     "\n",
     "# Define one-hot encoding for race1 (adjust based on your actual columns)\n",
     "race1_cols = ['race1_asian', 'race1_black', 'race1_hisp', 'race1_other', 'race1_white']\n",
@@ -93,7 +241,7 @@
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "grid_search = GridSearchCV(estimator=log_reg, param_grid=param_grid, cv=kf, scoring='accuracy')\n",
     "\n",
-    "# Store results for each subgroup\n",
+    "# Store results for each subgroup and overall model\n",
     "results = []\n",
     "\n",
     "# Train and evaluate the model for each sensitive attribute\n",
@@ -102,11 +250,11 @@
     "    \n",
     "    # Subset X and y for the current attribute\n",
     "    if attribute == 'race1':\n",
-    "        X_group = X[race1_cols]  # Subset features for race1\n",
+    "        X_group = df[race1_cols]  # Subset features for race1\n",
     "    else:\n",
-    "        X_group = X[[attribute]]  # Subset features for gender\n",
+    "        X_group = df[[attribute]]  # Subset features for gender\n",
     "    \n",
-    "    y_group = y  # Use the entire target variable for simplicity\n",
+    "    y_group = df['target']  # Use the entire target variable for simplicity\n",
     "    \n",
     "    # Perform grid search with cross-validation\n",
     "    grid_search.fit(X_group, y_group)\n",
@@ -139,8 +287,29 @@
     "    print(f\"Classification Report for {attribute}:\")\n",
     "    print(classification_report(y_group, y_pred))\n",
     "    \n",
+    "\n",
     "# Convert results to DataFrame for further analysis or visualization\n",
     "results_df = pd.DataFrame(results)\n",
+    "\n",
+    "# Evaluate and print the overall accuracy on the entire dataset\n",
+    "grid_search.fit(df.drop(columns=['target']), df['target'])\n",
+    "best_model = grid_search.best_estimator_\n",
+    "overall_y_pred = best_model.predict(df.drop(columns=['target']))\n",
+    "overall_accuracy = accuracy_score(df['target'], overall_y_pred)\n",
+    "overall_tn, overall_fp, overall_fn, overall_tp = confusion_matrix(df['target'], overall_y_pred).ravel()\n",
+    "overall_tpr = overall_tp / (overall_tp + overall_fn)  # True Positive Rate (Sensitivity)\n",
+    "overall_tnr = overall_tn / (overall_tn + overall_fp)  # True Negative Rate (Specificity)\n",
+    "\n",
+    "# Print overall model performance\n",
+    "print(f\"\\nOverall Model Accuracy: {overall_accuracy}\")\n",
+    "print(f\"Overall True Positive Rate (Sensitivity): {overall_tpr}\")\n",
+    "print(f\"Overall True Negative Rate (Specificity): {overall_tnr}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Print classification report for overall model performance\n",
+    "print(\"Classification Report for overall model:\")\n",
+    "print(classification_report(df['target'], overall_y_pred))\n",
     "\n",
     "# Display the results DataFrame\n",
     "print(\"Results for each attribute:\")\n",
