end of day push

--- a/baseline_evaluations.ipynb
+++ b/baseline_evaluations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,14 @@
     "    tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
     "    sensitivity = tp / (tp + fn)\n",
     "    specificity = tn / (tn + fp)\n",
+    "    fnr = fn / (fn + tp)  # False Negative Rate\n",
     "    \n",
     "    # Print results for the current sensitive attribute\n",
     "    print(f\"\\nEvaluation for {sensitive_attribute} - Group: {group_name_str}\")\n",
     "    print(f\"Accuracy: {accuracy}\")\n",
     "    print(f\"Sensitivity (True Positive Rate): {sensitivity}\")\n",
     "    print(f\"Specificity (True Negative Rate): {specificity}\")\n",
+    "    print(f\"False Negative Rate: {fnr}\")\n",
     "    \n",
     "    # Print classification report for more detailed metrics\n",
     "    print(f\"\\nClassification Report for {sensitive_attribute} - Group: {group_name_str}\")\n",
@@ -61,7 +63,8 @@
     "        'Group': group_name_str,\n",
     "        'Accuracy': accuracy,\n",
     "        'Sensitivity': sensitivity,\n",
-    "        'Specificity': specificity\n",
+    "        'Specificity': specificity,\n",
+    "        'FNR': fnr\n",
     "    }\n",
     "    \n",
     "    return results\n"
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +86,7 @@
       "Accuracy: 0.7333333333333333\n",
       "Sensitivity (True Positive Rate): 0.7453416149068323\n",
       "Specificity (True Negative Rate): 0.631578947368421\n",
+      "False Negative Rate: 0.2546583850931677\n",
       "\n",
       "Classification Report for race1 - Group: Asian\n",
       "              precision    recall  f1-score   support\n",
@@ -99,6 +103,7 @@
       "Accuracy: 0.6691449814126395\n",
       "Sensitivity (True Positive Rate): 0.6439024390243903\n",
       "Specificity (True Negative Rate): 0.75\n",
+      "False Negative Rate: 0.35609756097560974\n",
       "\n",
       "Classification Report for race1 - Group: Black\n",
       "              precision    recall  f1-score   support\n",
@@ -115,6 +120,7 @@
       "Accuracy: 0.6553398058252428\n",
       "Sensitivity (True Positive Rate): 0.6388888888888888\n",
       "Specificity (True Negative Rate): 0.7692307692307693\n",
+      "False Negative Rate: 0.3611111111111111\n",
       "\n",
       "Classification Report for race1 - Group: Hisp\n",
       "              precision    recall  f1-score   support\n",
@@ -131,6 +137,7 @@
       "Accuracy: 0.7195121951219512\n",
       "Sensitivity (True Positive Rate): 0.7105263157894737\n",
       "Specificity (True Negative Rate): 0.8333333333333334\n",
+      "False Negative Rate: 0.2894736842105263\n",
       "\n",
       "Classification Report for race1 - Group: Other\n",
       "              precision    recall  f1-score   support\n",
@@ -147,6 +154,7 @@
       "Accuracy: 0.7566052842273819\n",
       "Sensitivity (True Positive Rate): 0.7570917102726522\n",
       "Specificity (True Negative Rate): 0.7413793103448276\n",
+      "False Negative Rate: 0.24290828972734785\n",
       "\n",
       "Classification Report for race1 - Group: White\n",
       "              precision    recall  f1-score   support\n",
@@ -165,6 +173,7 @@
       "Accuracy: 0.7679777512912197\n",
       "Sensitivity (True Positive Rate): 0.7686567164179104\n",
       "Specificity (True Negative Rate): 0.7523809523809524\n",
+      "False Negative Rate: 0.23134328358208955\n",
       "\n",
       "Classification Report for gender - Group: Male\n",
       "              precision    recall  f1-score   support\n",
@@ -181,6 +190,7 @@
       "Accuracy: 0.7822990844354019\n",
       "Sensitivity (True Positive Rate): 0.7801840822956145\n",
       "Specificity (True Negative Rate): 0.8151260504201681\n",
+      "False Negative Rate: 0.2198159177043855\n",
       "\n",
       "Classification Report for gender - Group: Female\n",
       "              precision    recall  f1-score   support\n",
@@ -194,13 +204,13 @@
       "\n",
       "\n",
       "Summary of Results:\n",
-      "{'Attribute': 'race1', 'Group': 'Asian', 'Accuracy': 0.7333333333333333, 'Sensitivity': 0.7453416149068323, 'Specificity': 0.631578947368421}\n",
-      "{'Attribute': 'race1', 'Group': 'Black', 'Accuracy': 0.6691449814126395, 'Sensitivity': 0.6439024390243903, 'Specificity': 0.75}\n",
-      "{'Attribute': 'race1', 'Group': 'Hisp', 'Accuracy': 0.6553398058252428, 'Sensitivity': 0.6388888888888888, 'Specificity': 0.7692307692307693}\n",
-      "{'Attribute': 'race1', 'Group': 'Other', 'Accuracy': 0.7195121951219512, 'Sensitivity': 0.7105263157894737, 'Specificity': 0.8333333333333334}\n",
-      "{'Attribute': 'race1', 'Group': 'White', 'Accuracy': 0.7566052842273819, 'Sensitivity': 0.7570917102726522, 'Specificity': 0.7413793103448276}\n",
-      "{'Attribute': 'gender', 'Group': 'Male', 'Accuracy': 0.7679777512912197, 'Sensitivity': 0.7686567164179104, 'Specificity': 0.7523809523809524}\n",
-      "{'Attribute': 'gender', 'Group': 'Female', 'Accuracy': 0.7822990844354019, 'Sensitivity': 0.7801840822956145, 'Specificity': 0.8151260504201681}\n"
+      "{'Attribute': 'race1', 'Group': 'Asian', 'Accuracy': 0.7333333333333333, 'Sensitivity': 0.7453416149068323, 'Specificity': 0.631578947368421, 'FNR': 0.2546583850931677}\n",
+      "{'Attribute': 'race1', 'Group': 'Black', 'Accuracy': 0.6691449814126395, 'Sensitivity': 0.6439024390243903, 'Specificity': 0.75, 'FNR': 0.35609756097560974}\n",
+      "{'Attribute': 'race1', 'Group': 'Hisp', 'Accuracy': 0.6553398058252428, 'Sensitivity': 0.6388888888888888, 'Specificity': 0.7692307692307693, 'FNR': 0.3611111111111111}\n",
+      "{'Attribute': 'race1', 'Group': 'Other', 'Accuracy': 0.7195121951219512, 'Sensitivity': 0.7105263157894737, 'Specificity': 0.8333333333333334, 'FNR': 0.2894736842105263}\n",
+      "{'Attribute': 'race1', 'Group': 'White', 'Accuracy': 0.7566052842273819, 'Sensitivity': 0.7570917102726522, 'Specificity': 0.7413793103448276, 'FNR': 0.24290828972734785}\n",
+      "{'Attribute': 'gender', 'Group': 'Male', 'Accuracy': 0.7679777512912197, 'Sensitivity': 0.7686567164179104, 'Specificity': 0.7523809523809524, 'FNR': 0.23134328358208955}\n",
+      "{'Attribute': 'gender', 'Group': 'Female', 'Accuracy': 0.7822990844354019, 'Sensitivity': 0.7801840822956145, 'Specificity': 0.8151260504201681, 'FNR': 0.2198159177043855}\n"
      ]
     }
    ],
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +703,6 @@
     "X_train_fair_PCA, U = fair_PCA(X_train, group_train)\n",
     "X_test_fair_PCA = X_test @ U\n",
     "\n",
-    "# Fit Random Forest models and evaluate performance\n",
     "\n",
     "\n",
     "# Random Forest model on non-transformed data\n",
@@ -868,6 +877,96 @@
     "# Calculate accuracy for women\n",
     "accuracy_women = accuracy_score(y_test_female, y_pred_women)\n",
     "print(\"Accuracy for women:\", accuracy_women)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 564,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilities for observation 57: Class 0 = 0.07, Class 1 = 0.93\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.19936248,  0.41024637,  0.15552061,  1.01003177,  0.40347497,\n",
+       "         0.10440911]])"
+      ]
+     },
+     "execution_count": 564,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Assuming X_test and model are already defined\n",
+    "# X_test should be a DataFrame or numpy array containing your test data\n",
+    "\n",
+    "# Example: Assuming X_test is a numpy array of shape (n_samples, n_features)\n",
+    "# and we want to predict probabilities for the 57th observation\n",
+    "\n",
+    "# Step 1: Extract the 57th observation from X_test\n",
+    "observation_57 = X_test_fair_PCA[57]\n",
+    "\n",
+    "# Step 2: Reshape the observation to match the expected input shape for prediction\n",
+    "observation_57 = observation_57.reshape(1, -1)  # Reshape to (1, n_features) if necessary\n",
+    "\n",
+    "# Step 3: Predict probabilities using the trained model\n",
+    "probabilities = model.predict_proba(observation_57)\n",
+    "\n",
+    "# Print the probabilities for each class\n",
+    "print(f\"Probabilities for observation 57: Class 0 = {probabilities[0, 0]}, Class 1 = {probabilities[0, 1]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 557,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False Negative Rate for Men: 0.004122011541632316\n",
+      "False Negative Rate for Women: 0.007344840249724568\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Confusion matrix for men\n",
+    "cm_men = confusion_matrix(y_test_male, y_pred_men)\n",
+    "\n",
+    "# Extract relevant values from confusion matrix\n",
+    "tn_men, fp_men, fn_men, tp_men = cm_men.ravel()\n",
+    "\n",
+    "# Calculate false negative rate for men\n",
+    "false_negative_rate_men = fn_men / (fn_men + tp_men)\n",
+    "\n",
+    "print(\"False Negative Rate for Men:\", false_negative_rate_men)\n",
+    "\n",
+    "# Confusion matrix for women\n",
+    "cm_women = confusion_matrix(y_test_female, y_pred_women)\n",
+    "\n",
+    "# Extract relevant values from confusion matrix\n",
+    "tn_women, fp_women, fn_women, tp_women = cm_women.ravel()\n",
+    "\n",
+    "# Calculate false negative rate for women\n",
+    "false_negative_rate_women = fn_women / (fn_women + tp_women)\n",
+    "\n",
+    "print(\"False Negative Rate for Women:\", false_negative_rate_women)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
