random forest decreases FNR

--- a/baseline_evaluations.ipynb
+++ b/baseline_evaluations.ipynb
@@ -646,56 +646,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([[-0.02331036,  1.055605  , -0.11451093, -1.16803007,  0.2566339 ,\n",
-       "         -0.06879034],\n",
-       "        [-1.19075623, -1.24678378, -2.77641526,  0.46310547, -0.24371715,\n",
-       "          0.00483879],\n",
-       "        [ 0.99023231, -0.0133253 , -0.18992884,  0.75868361,  0.12078781,\n",
-       "         -0.02549978],\n",
-       "        ...,\n",
-       "        [ 1.09041606,  0.72070708, -0.35311907, -0.44880289,  0.0838243 ,\n",
-       "         -0.06952295],\n",
-       "        [ 0.26628403,  0.53398928, -0.14174458, -0.38750665, -0.08799137,\n",
-       "         -0.02819265],\n",
-       "        [ 0.75153974,  1.11011261, -0.33582118, -0.66040081, -0.27104932,\n",
-       "         -0.10632095]]),\n",
-       " array([[ 0.30851249, -0.13102191, -0.08939409,  0.14176352, -0.40324052,\n",
-       "         -0.71534719],\n",
-       "        [ 0.19636593, -0.02608751,  0.02839774,  0.1229679 ,  0.72858748,\n",
-       "         -0.02019279],\n",
-       "        [ 0.2774453 , -0.09104874, -0.07407664,  0.09668484, -0.39982765,\n",
-       "          0.69372686],\n",
-       "        [-0.27545777, -0.16135158,  0.1683468 , -0.29281913,  0.19388113,\n",
-       "         -0.01804582],\n",
-       "        [ 0.09603965,  0.06929708, -0.03286921, -0.23723352, -0.15468993,\n",
-       "          0.00463308],\n",
-       "        [ 0.54786922,  0.1999319 , -0.55211703,  0.00300655,  0.19265879,\n",
-       "          0.04265877],\n",
-       "        [-0.30127011,  0.50406916, -0.02674967, -0.21730384, -0.20725661,\n",
-       "         -0.01700674],\n",
-       "        [-0.23224348, -0.23182113,  0.05052428,  0.78065826, -0.04739496,\n",
-       "          0.05105583],\n",
-       "        [-0.04733283, -0.01337834,  0.00229006,  0.09480062,  0.01969088,\n",
-       "          0.01538081],\n",
-       "        [-0.22045365,  0.68805373, -0.18323684,  0.3699657 ,  0.04717047,\n",
-       "         -0.03565224],\n",
-       "        [-0.45659869, -0.34875491, -0.78397158, -0.10436551,  0.01563861,\n",
-       "         -0.00657542]]))"
-      ]
-     },
-     "execution_count": 297,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'DataFrame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[298], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fair_PCA_df \u001b[38;5;241m=\u001b[39m \u001b[43mfair_PCA_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAsian\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBlack\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHispanic\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOther\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGender\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'DataFrame'"
+     ]
     }
    ],
    "source": [
-    "fair_PCA_data"
+    "fair_PCA_df = fair_PCA_data.DataFrame(columns=['Asian', 'Black', 'Hispanic', 'Other', 'Gender'])"
    ]
   },
   {
