also included plots for the gender subgroup

--- a/baseline_evaluations.ipynb
+++ b/baseline_evaluations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,7 @@
     "    # Split data into train and test sets\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "    \n",
-    "    # Standardize numerical features if necessary\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train = scaler.fit_transform(X_train)\n",
-    "    X_test = scaler.transform(X_test)\n",
-    "    \n",
+    "\n",
     "    # Train a random forest model\n",
     "    model = RandomForestClassifier(n_estimators=100, max_depth=10, min_samples_leaf=25, random_state=42, class_weight='balanced')\n",
     "    model.fit(X_train, y_train)\n",
@@ -100,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -232,20 +228,20 @@
       "\n",
       "\n",
       "Overall Evaluation Results:\n",
-      "Accuracy: 0.9489067380633646\n",
-      "Sensitivity (True Positive Rate): 0.9962406015037594\n",
-      "Specificity (True Negative Rate): 0.05752212389380531\n",
-      "False Negative Rate: 0.0037593984962406013\n",
+      "Accuracy: 0.8172690763052208\n",
+      "Sensitivity (True Positive Rate): 0.8218984962406015\n",
+      "Specificity (True Negative Rate): 0.7300884955752213\n",
+      "False Negative Rate: 0.17810150375939848\n",
       "\n",
       "Classification Report - Overall\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.45      0.06      0.10       226\n",
-      "           1       0.95      1.00      0.97      4256\n",
+      "           0       0.18      0.73      0.29       226\n",
+      "           1       0.98      0.82      0.90      4256\n",
       "\n",
-      "    accuracy                           0.95      4482\n",
-      "   macro avg       0.70      0.53      0.54      4482\n",
-      "weighted avg       0.93      0.95      0.93      4482\n",
+      "    accuracy                           0.82      4482\n",
+      "   macro avg       0.58      0.78      0.59      4482\n",
+      "weighted avg       0.94      0.82      0.86      4482\n",
       "\n",
       "\n",
       "Summary of Results:\n",
@@ -256,7 +252,7 @@
       "{'Attribute': 'race1', 'Group': 'White', 'Accuracy': 0.8278622898318655, 'Sensitivity': 0.8355824841641422, 'Specificity': 0.5862068965517241, 'FNR': 0.1644175158358579}\n",
       "{'Attribute': 'gender', 'Group': 'Male', 'Accuracy': 0.8239968216130313, 'Sensitivity': 0.8308457711442786, 'Specificity': 0.6666666666666666, 'FNR': 0.1691542288557214}\n",
       "{'Attribute': 'gender', 'Group': 'Female', 'Accuracy': 0.8260427263479145, 'Sensitivity': 0.8289117487818083, 'Specificity': 0.7815126050420168, 'FNR': 0.17108825121819166}\n",
-      "{'Attribute': True, 'Accuracy': 0.9489067380633646, 'Sensitivity': 0.9962406015037594, 'Specificity': 0.05752212389380531, 'FNR': 0.0037593984962406013}\n"
+      "{'Attribute': True, 'Accuracy': 0.8172690763052208, 'Sensitivity': 0.8218984962406015, 'Specificity': 0.7300884955752213, 'FNR': 0.17810150375939848}\n"
      ]
     }
    ],
@@ -266,18 +262,14 @@
     "def evaluate_overall(df):\n",
     "    # Separate features (X) and target (y)\n",
     "    X = df.drop(['pass_bar'], axis=1)  # Drop the target column\n",
-    "    y = df['pass_bar']  # Assuming 'pass_bar' is your target column\n",
+    "    y = df['pass_bar']  \n",
     "    \n",
     "    # Split data into train and test sets\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "    \n",
-    "    # Standardize numerical features if necessary\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train = scaler.fit_transform(X_train)\n",
-    "    X_test = scaler.transform(X_test)\n",
     "    \n",
     "    # Train a random forest model\n",
-    "    model = RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=42)\n",
+    "    model = RandomForestClassifier(n_estimators=100, max_depth=10, min_samples_leaf=25, random_state=42, class_weight='balanced')\n",
     "    model.fit(X_train, y_train)\n",
     "    \n",
     "    # Evaluate on the test set\n",
@@ -363,7 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.DataFrame(results)\n",
+    "results.to_csv('data/results_baseline.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
